fix: use isBlank() instead of trim().isEmpty() to correctly handle unicode whitespace in JdbcChatMemoryRepository
Signed-off-by: astor-dev <orangnlp@gmail.com>